syntax = "proto3";

package obs_remote.v5.sources;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Sources {
  // Original: GetSourceList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSourceActive
  rpc IsActive(google.protobuf.StringValue) returns (IsActiveReply);
  // Original: GetSourceScreenshot
  rpc Screenshot(ScreenshotRequest) returns (google.protobuf.BytesValue);
  // Original: SaveSourceScreenshot
  rpc SaveScreenshot(SaveScreenshotRequest) returns (google.protobuf.Empty);
}

message IsActiveReply {
  bool active = 1;
  bool showing = 2;
}

message ScreenshotRequest {
  string name = 1;
  uint32 width = 2;
  uint32 height = 3;
  ImageFormat format = 4;
  uint32 compression = 5;

  enum ImageFormat {
    IMAGE_FORMAT_UNSPECIFIED = 0;
    IMAGE_FORMAT_PNG = 1;
    IMAGE_FORMAT_JPG = 2;
  }
}

message SaveScreenshotRequest {
  string file_path = 1;
  ScreenshotRequest details = 2;
}
